--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,9 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
-*.json filter=lfs diff=lfs merge=lfs -text
+# Keep JSON selective. Global JSON LFS causes config files to become pointers.
 .graphrag_index/*.json filter=lfs diff=lfs merge=lfs -text
+archive_forge/manifests/**/*.json filter=lfs diff=lfs merge=lfs -text
+reports/**/*.json filter=lfs diff=lfs merge=lfs -text
+models/*.gguf filter=lfs diff=lfs merge=lfs -text
+*.gguf filter=lfs diff=lfs merge=lfs -text
