--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ settings.yaml
 graphrag_workspace/
 prompts/
 reports/benchmark_matrix.json
+reports/graphrag/*.log
+reports/graphrag/*.prof
+reports/graphrag/bench_profile_*.txt
 benchmarks/eidosian_consensus_bench.py
 models/Llama-3.2-1B-Instruct-Q8_0.gguf
 models/Qwen2.5-0.5B-Instruct-Q8_0.gguf
