--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,10 +219,13 @@ jobs:
   test:
     name: 🧪 Test
     needs: [validate, lint]
-    if: always() && needs.validate.outputs.should_run == 'true'
+    if: needs.validate.outputs.should_run == 'true' && needs.lint.result == 'success'
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read  # Only reading repository contents
+    defaults:
+      run:
+        shell: bash
     strategy:
       fail-fast: false
       matrix:
@@ -245,7 +248,6 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           # Install testing tools directly
           pip install pytest pytest-cov pytest-xdist hypothesis
-        shell: bash
 
       - name: 🔍 Run tests
         run: |
@@ -279,7 +281,7 @@ jobs:
   test-typescript:
     name: 🧪 Test TypeScript
     needs: [validate, lint]
-    if: always() && needs.validate.outputs.should_run == 'true' && needs.validate.outputs.has_typescript == 'true'
+    if: needs.validate.outputs.should_run == 'true' && needs.validate.outputs.has_typescript == 'true' && needs.lint.result == 'success'
     runs-on: ubuntu-latest
     permissions:
       contents: read  # Only reading repository contents
@@ -321,7 +323,7 @@ jobs:
   docs:
     name: 📚 Documentation
     needs: [validate, lint]
-    if: always() && needs.validate.outputs.should_run == 'true'
+    if: needs.validate.outputs.should_run == 'true' && needs.lint.result == 'success'
     runs-on: ubuntu-latest
     permissions:
       contents: read  # Only reading repository contents
@@ -373,7 +375,7 @@ jobs:
   build:
     name: 📦 Build
     needs: [validate, test]
-    if: always() && needs.validate.outputs.should_run == 'true'
+    if: needs.validate.outputs.should_run == 'true' && needs.test.result == 'success'
     runs-on: ubuntu-latest
     outputs:
       has_wheel: ${{ steps.package_meta.outputs.has_wheel }}
