--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,14 +16,14 @@ on:
   push:
     branches: [main, master, develop]
     paths:
-      - "**.py"
-      - "**.ts"
-      - "**.tsx"
-      - "**.js"
-      - "**.jsx"
-      - "**.json"
-      - "**.yaml"
-      - "**.yml"
+      - "**/*.py"
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.jsx"
+      - "**/*.json"
+      - "**/*.yaml"
+      - "**/*.yml"
 
 env:
   PYTHONUNBUFFERED: 1
@@ -32,6 +32,10 @@ env:
 # Default permissions for all jobs
 permissions:
   contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   format-python:
@@ -99,7 +103,7 @@ jobs:
           fi
 
       - name: 💾 Commit changes
-        if: steps.check_changes.outputs.changes == 'true' && (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_changes == 'true' || github.event_name != 'workflow_dispatch')
+        if: steps.check_changes.outputs.changes == 'true' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_changes == 'true'))
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -158,7 +162,7 @@ jobs:
           fi
 
       - name: 💾 Commit changes
-        if: steps.check_changes.outputs.changes == 'true' && (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_changes == 'true' || github.event_name != 'workflow_dispatch')
+        if: steps.check_changes.outputs.changes == 'true' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.commit_changes == 'true'))
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
