--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [main, master, develop]
     paths:
-      - "**.py"
-      - "**.ts"
-      - "**.tsx"
-      - "**.js"
-      - "**.jsx"
+      - "**/*.py"
+      - "**/*.ts"
+      - "**/*.tsx"
+      - "**/*.js"
+      - "**/*.jsx"
   pull_request:
     branches: [main, master, develop]
   workflow_dispatch:
