--- a/doc_forge/requirements.txt
+++ b/doc_forge/requirements.txt
@@ -87,7 +87,7 @@ mypy-extensions==1.0.0
 myst-parser==4.0.1
 namex==0.0.8
 natsort==8.4.0
-nltk==3.9.1
+nltk @ git+https://github.com/nltk/nltk@1056b323af6462455571302e766b67cf300aea18
 nox==2025.2.9
 numpy==2.1.3
 ollama==0.4.7
@@ -190,7 +190,7 @@ webencodings==0.5.1
 WebOb==1.8.9
 websockets==15.0.1
 WebTest==3.0.4
-Werkzeug==3.1.5
+Werkzeug==3.1.6
 wheel==0.46.2
 wrapt==1.17.2
 yarl==1.18.3
