fix(ci): stabilize figlet and gene-particles tests in github runners

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -358,11 +358,18 @@ jobs:
             httpx \
             requests \
             mcp \
+            openai \
+            fastapi \
             pandas \
             pyarrow \
             psutil \
             pyyaml \
             huggingface_hub \
+            chromadb \
+            nltk \
+            pyfiglet \
+            colorama \
+            tika \
             networkx \
             websockets \
             pillow \
