fix(ci): resolve remaining failing test groups across mcp figlet game glyph and moltbook

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -360,6 +360,7 @@ jobs:
             mcp \
             openai \
             fastapi \
+            jinja2 \
             pandas \
             pyarrow \
             psutil \
