test(pytest): pin asyncio fixture loop scope for stable CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = -v --ignore=google-cloud-sdk --ignore=eidosian_venv --ignore=.venv --ignore=venv --ignore=node_modules
+asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore:pkg_resources is deprecated as an API:UserWarning
     ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning
