ci(parity): include psutil for diagnostics/system MCP coverage

--- a/.github/workflows/consciousness-parity.yml
+++ b/.github/workflows/consciousness-parity.yml
@@ -61,6 +61,7 @@ jobs:
             mcp \
             fastapi \
             uvicorn \
+            psutil \
             python-dotenv \
             pyyaml \
             rich \
