--- a/.github/workflows/consciousness-parity.yml
+++ b/.github/workflows/consciousness-parity.yml
@@ -58,6 +58,7 @@ jobs:
             pydantic \
             httpx \
             requests \
+            networkx \
             mcp \
             fastapi \
             uvicorn \
