ci(parity): add openai dep so llm forge status loads in audit gate

--- a/.github/workflows/consciousness-parity.yml
+++ b/.github/workflows/consciousness-parity.yml
@@ -59,6 +59,7 @@ jobs:
             httpx \
             requests \
             networkx \
+            openai \
             mcp \
             fastapi \
             uvicorn \
