--- a/.github/workflows/consciousness-parity.yml
+++ b/.github/workflows/consciousness-parity.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Run Linux Parity Smoke
         env:
           PYTHONUNBUFFERED: "1"
+          EIDOS_AUDIT_OPTIONAL_FORGES: "mkey,llm,erais"
         run: |
           bash scripts/linux_parity_smoke.sh
 
