--- a/code_forge/.github/workflows/python-package.yml
+++ b/code_forge/.github/workflows/python-package.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
+        pip install pytest-cov
         
     - name: Lint with flake8
       run: |
@@ -41,7 +42,7 @@ jobs:
         
     - name: Test with pytest
       run: |
-        pytest
+        pytest tests --cov=src/code_forge --cov-report=term-missing --cov-fail-under=70
         
     - name: Build package
       run: |
