feat(code+crawl): add parser adapters and crawl cache hardening

--- a/code_forge/pyproject.toml
+++ b/code_forge/pyproject.toml
@@ -36,6 +36,10 @@ lint = [
     "black>=24.0.0",
     "ruff>=0.1.0",
 ]
+parsers = [
+    "tree-sitter>=0.22.3",
+    "tree-sitter-language-pack>=0.2.0",
+]
 
 [project.scripts]
 code-forge = "code_forge.cli:main"
